DROOLS-7238 Rete Buildtime Segmentation (#4812)
* DROOLS-7238 Rete Buildtime Segmentation

* fix compile time error + minor cleanup

Co-authored-by: mariofusco <mario.fusco@gmail.com>